--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Pytorch Weight File
+*.pt
+*.pth
+
 # Test running
 test_run.py
 test_img.jpg
